--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ production:
   stage: production
   script:
     - npm install --production
-    - (echo "machine git.heroku.com"; echo " login vishnuduveys@gmail.com"; echo " password Me4cutie@123") > ~/.netrc
+    - (echo "machine git.heroku.com"; echo " login vishnuduveys@gmail.com"; echo " password Me4cutie@123";) > ~/.netrc
     - git push https://git.heroku.com/appbuynsell.git HEAD:master
   only:
     - master
