--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: node:latest
 
 stages: 
   - build
+  - test
   - production
 
 cache:
@@ -16,12 +17,17 @@ install-dependencies:
     paths:
       - node_modules/
 
+lint-checks:
+  stage: test
+  script: 
+    - npm run lint
+
 production:
   type: deploy
   stage: production
   script:
     - npm install --production
-    - (echo "machine git.heroku.com"; echo " login vishnuduveys@gmail.com"; echo " password Me4cutie@123";)
+    - (echo "machine git.heroku.com"; echo " login vishnuduveys@gmail.com"; echo " password $HEROKU_API_KEY") > ~/.netrc
     - git push https://git.heroku.com/appbuynsell.git HEAD:master
   only:
     - master
